Fix color contrast on preprint detail page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -344,6 +344,26 @@ $logo-dir: 'img/provider_logos/';
     .abstract {
         white-space: pre-line;
     }
+
+    button.btn-link {
+        color: #255884;
+    }
+
+    .doi-section {
+        a{
+            color: #255884;
+        }
+    }
+
+    .tag-section {
+        span.badge {
+            background-color: #555;
+        }
+    }
+
+    .ember-power-select-placeholder {
+        color: #555;
+    }
     .abstract-truncated:after {
         content: ' \2026';
     }
@@ -841,6 +861,7 @@ hr {
 .preprint-form-section {
     header {
         @extend a;
+
         cursor: pointer;
         font: {
             size: 16px;
